@@ -3,14 +3,14 @@ Hash: SHA1
 
 DIST libmcs-0.6.0.tgz 106917 RMD160 e28b02b44e2d9c26969d475b1ba888d50d5d6363 SHA1 5cd3960f7a9c42eb136c49585a92be1e1549bd42 SHA256 7e6ee152b7fa1ab9aac2fe83fd4aed3c0792e5f2638c5c23d4405419f3a6a744
 DIST libmcs-0.7.0.tgz 106300 RMD160 5817fcba32b0c697594bbb8fa2647654f290c383 SHA1 a4044047a31aaec8b6d97b6960f676eca9049cb1 SHA256 c54bf12b7d222fe2286ab4a116d5b44cc6374991ca37644cc5db83f97acf1287
-EBUILD libmcs-0.6.0.ebuild 1047 RMD160 a12eb3ae5833634e74d966d400a728306a74da8a SHA1 be3010fceb18d9deb694144edc406811a2f5d6c5 SHA256 d931413081782ae33c90d90affc16dfbabeac12c9110a0478fe286748f90607e
-EBUILD libmcs-0.7.0.ebuild 1057 RMD160 deed89a51474d5c4dbc1c410e125728dbc799e00 SHA1 91d1ee592f100dd6bdbf2c94797d0b403ac5b23a SHA256 dfc64e610bbb002d7a58fe44a60cdd8a8aa6aa41c2728b7ac9f444c8d8096d03
-MISC ChangeLog 4863 RMD160 d5cdb09cb7d557c4e10b01127caf162523aa0512 SHA1 cdf37f843eec4ef23314558547faa0e02cd972ae SHA256 c6c594ce704f5570f31d2eef11c9921cf44ebb277927de9d3ae8dfe34f252c18
+EBUILD libmcs-0.6.0.ebuild 1079 RMD160 58951bf69904d5421e21d1eee6864051a33425ad SHA1 a4ed6b84abf121a92523d349f9bd8725fe118f42 SHA256 7a4781bc9176c1dee328cb0904e344c93ece8d6a1ec5407083098767b235e77d
+EBUILD libmcs-0.7.0.ebuild 1085 RMD160 5831ef901e928355044e355d14be3e4b6f3e6839 SHA1 e4252301b68eaed54dc9720d9287d58758a6c892 SHA256 e1696eefcfe187415b1f5c16e04fd21aabe58f3a8a8b6336b28ad2e41d2ba03c
+MISC ChangeLog 5050 RMD160 e2c7b5e40c0edbd4e5594557c77320c723d94ae9 SHA1 a62b93bb78fb9b0ccebc2b445aec1dcd245a5af3 SHA256 e4e7563d0338c8e7c7c562031c9cfeafd78fcea21b76a15a8312a3f119ac0903
 MISC metadata.xml 310 RMD160 5b57282cd45b5ebfd0a5182cd665dbb684a7d25c SHA1 9f12cf187b3a67133f2ae900cf70fcc7f7a27b9a SHA256 c63ceb5c6294486637d1c424469d11db066aa906dc970e9be311c29a6563a3c6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.7 (GNU/Linux)
+Version: GnuPG v2.0.9 (GNU/Linux)
 
-iD8DBQFHuZv7p5vW4rUFj5oRAosgAKCOTzR5PMGnePNGKUaAYkBam4W/JgCghcX6
-By0dZSTNjXUs3PWbFgrUblc=
-=Lm39
+iEYEARECAAYFAkf/Sg8ACgkQp5vW4rUFj5oxzgCgqeO8QF0e6GVkT/J7DbGPuIV5
+8NgAn3/7Lpl1dPfmc21XoEJs6Gujrkp6
+=IGiF
 -----END PGP SIGNATURE-----
